--- a/public/2Q1GMgEspinosa.html
+++ b/public/2Q1GMgEspinosa.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" href = "../assets/top4univ_favicon2 (2).png" type = "image/png">
-    <title>De La Salle University</title>
-    <link rel="stylesheet" href="styles.css">
+<html lang="en "> 
+<head> 
+    <meta charset="UTF -8">
+    <meta name="viewport" content="width=devide-width, initial scale=1.0">
+    <meta name="description" content="De La Salle University, programs, achievements, why it is one of the top universities in the Philippines."> 
+    <meta name="keywords" content="Top 4 Universities in the Philippines, De La Salle University, education, collage, History, Programs">
+    <meta name="author" content="Espinosa, Cassandra">
+    <title> Top 4 Universities in the Philippines</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../assets/top4univ_favicon2.png" type="image/png"/>
+    <script src="script.js"defer></script>
+
 </head>
 <body>
-<h1> Top 4 Universities in the Philippines</h1>
-<h2> by Mg11, Mg14, Mg19, and Mg26 </h2>
-<h1> De La Salle University </h1>
-<img src="../assets/De_Lasalle.png" alt = "La Salle"
-title ="Picture of De La Salle University" width = "500px" height = "300px">   
-<br>
-<iframe width = "560" height ="315" src=""
-title = "De La Salle Chant" frame
-</body>
+    <header>
+        <img src="../assets/lasalle_logo.png" alt="UST logo" width="100" height="115" style="vertical-align: middle;">
+        <h1 style="display: inline-block; vertical-align: middle; margin-left: 10px;">
+            De La Salle University
+        </h1>
+        <nav>
+            <a href="../index.html"> Home </a></br>
+            <a href ="#"> Ateneo De Manila </a></br>
+            <a href ="#"> University of the Philippines (UP) </a></br>
+            <a href ="#"> University of Santo Tomas (UST) </a></br>
+        </nav>
+    </header>
+    <section>
+        <div style="border: 2px solid #08500e; padding: 20px; background-color: #fffbe6;">
+        <h2>History of De La Salle University</h2>
+        <p>
+            Founded on April 28, 1611 the University of Santo Tomas (UST) is recognized as the oldest existing university in Asia. Originally Bishop Miguel de Benavides, O.P. initiated the establishment of this institution to prepare young men for the priesthood, his personal library and funds became the start of UST’s history. UST has played a big role in shaping the education, Catholicism, and culture of the Philippines for over four centuries. From its humble beginnings as the Colegio de Nuestra Señora del Santisimo Rosario in Intramuros, it has grown into a world-renowned institution for learning. Today, UST proudly holds the title of being the largest Catholic university in the world located on a single campus. With their mission that aims to develop knowledgeable, competent, and compassionate individuals guided by faith and reason, dedicated to serving the Church, the nation, and the world. Along with their vision that by 2030, the University of Santo Tomas envisions becoming a leading Catholic university in the Asia-Pacific, dedicated to holistic education and social transformation. UST truly serves as an important asset to the students' morals and the Philippines' future generations to come.
+        </p>
+        </div>
+        <br><img src="../assets/IMG_1353-1068x601.jpg" alt="image.png" width="500" height="300">
+        <div style="border: 2px solid #08500e; padding: 20px; background-color: #fffbe6;">
+        <h2>About De La Salle University</h2>
+        <p>
+        ---
+        </p>
+        </div>
+        <div style="border: 2px solid #08500e; padding: 20px; background-color: #fffbe6;">
+        <h2>About De La Salle University</h2>
+        <p>
+        ---
+        </p>
+        </div>
+
+
+        <iframe src="../assets/SSvid.net--UNIVERSITY-HYMN-The-UST-Hymn-LYRIC-VIDEO-Hymn-of-UST-Philippines_360p.mp4" 
+        alt="vid.mp4" width="500" height="300"></iframe>
+        <body style="background-image: url('../assets/1-UST-Zoom-Background_Main_Bldg_with_name.jpg'); background-size: 100%; background-repeat: repeat;">
+    </section>
+    <footer>
+
+    </footer>
+        
+    </body>
+
+
 </html>
