--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassie's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content = "width=device-width, initial-scale=1.0" />
+    <meta name= "description" content ="2Q portfolio" />
+    <meta name="keywords" content= "2Q, Portfolio,Projects, Web development" />
+    <meta name="author" content ="AL Mendoza" />
+
+    <title>2Q Portoflio</title>
+    <link rel="stykesheet" href="style.css" />
+    <link re="icon" href=""./assets/pshslogo.png" sizes="32x32" type="image.png" />
+    <script src="script.js" defer></script>
+
+
 </head>
 <body>
+    <div>
+        <img src="pic" alt = "hachiware" title="hachiware">
+        <h1>
+            My Q2 Portfolio work
+        </h1>
+    </div>
+    <nav>
 
-    
+        <a href="./public/2Q1GMgEspinosa.html"> First Graded</a></br>
+        <a href ="#"> Second Graded </a> 
+        <a href ="#"> Third Graded </a>
+        <a href ="#">  Access to our Project </a>
+    </nav>
 </body>
 </html>
+<header>
+
+</header>
+<section></section>
+
