finished first graded

--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
 
     <title>2Q Portoflio</title>
     <link rel="stykesheet" href="style.css" />
-    <link re="icon" href=""./assets/pshslogo.png" sizes="32x32" type="image.png" />
+    <link rel="icon" href="../assets/hachiware" sizes="32x32" type="image.png" />
     <script src="script.js" defer></script>
 
 
 </head>
 <body>
     <div>
-        <img src="pic" alt = "hachiware" title="hachiware">
-        <h1>
-            My Q2 Portfolio work
+       
+       <h1 style="background-color: #cce7ff; color: #4e7ba0; padding: 10px 20px; border-radius: 15px; display: inline-block;">
+            𝘾𝙖𝙨𝙨𝙞𝙚 𝙀𝙨𝙥𝙞𝙣𝙤𝙨𝙖 | 𝙈𝙮 𝙌𝟮 𝙋𝙤𝙧𝙩𝙛𝙤𝙡𝙞𝙤 𝙒𝙤𝙧𝙠! ᯓ★ˎˊ˗
         </h1>
     </div>
     <nav>
-
-        <a href="./public/2Q1GMgEspinosa.html"> First Graded</a></br>
-        <a href ="#"> Second Graded </a> 
-        <a href ="#"> Third Graded </a>
-        <a href ="#">  Access to our Project </a>
+        <a href="./public/2Q1GMgEspinosa.html" style="font-size: 20px; color: #80aae5;"> ˖» 𝙁𝙞𝙧𝙨𝙩 𝙂𝙧𝙖𝙙𝙚𝙙 𐙚 </a> <br> 
+        <a href ="#" style="font-size: 20px; color: #80aae5;"> ˖» 𝙎𝙚𝙘𝙤𝙣𝙙 𝙂𝙧𝙖𝙙𝙚𝙙 𐙚 </a></br>
+        <a href ="#" style="font-size: 20px; color: #80aae5;"> ˖» 𝙏𝙝𝙞𝙧𝙙 𝙂𝙧𝙖𝙙𝙚𝙙 𐙚 </a></br> 
+        <a href ="#" style="font-size: 20px; color: #80aae5;"> ˖» 𝘼𝙘𝙘𝙚𝙨𝙨 𝙩𝙤 𝙤𝙪𝙧 𝙋𝙧𝙤𝙟𝙚𝙘𝙩 𐙚 </a></br>
     </nav>
+
+    <img src="https://media1.tenor.com/m/LtszwWQIiuwAAAAC/cinnamoroll-hi.gif" alt = "cinnamoroll" title="cinamorollll">
 </body>
 </html>
 <header>
