link for la salle

--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content = "width=device-width, initial-scale=1.0" />
-    <meta name= "description" content ="2Q portfolio" />
-    <meta name="keywords" content= "2Q, Portfolio,Projects, Web development" />
-    <meta name="author" content ="AL Mendoza" />
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="index.html"> 
+  <meta name="keywords" content="Portfolio, CS, Computer Science, 2nd Quarter">
+  <meta name="author" content="ESPINOSA, Cassandra">
+  <link rel="icon" href=https://media.tenor.com/P5EJALTMklMAAAAj/cinnamoroll.gif type="image/gif"/>
 
-    <title>2Q Portoflio</title>
-    <link rel="stykesheet" href="style.css" />
-    <link rel="icon" href="../assets/hachiware" sizes="32x32" type="image.png" />
-    <script src="script.js" defer></script>
-
-
+  <title>𝘾𝙖𝙨𝙨𝙞𝙚 𝙀𝙨𝙥𝙞𝙣𝙤𝙨𝙖 | 𝙈𝙮 𝙌𝟮 𝙋𝙤𝙧𝙩𝙛𝙤𝙡𝙞𝙤 𝙒𝙤𝙧𝙠! ᯓ★ˎˊ˗ ⋆ </title>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 </head>
+<body style="background-image: url('https://wallpapers.com/images/high/cinnamoroll-and-milk-sanrio-edj28kmkxy2c04el.webp'); background-size: cover; background-repeat: no-repeat;"></body>
+
 <body>
-    <div>
-       
-       <h1 style="background-color: #cce7ff; color: #4e7ba0; padding: 10px 20px; border-radius: 15px; display: inline-block;">
-            𝘾𝙖𝙨𝙨𝙞𝙚 𝙀𝙨𝙥𝙞𝙣𝙤𝙨𝙖 | 𝙈𝙮 𝙌𝟮 𝙋𝙤𝙧𝙩𝙛𝙤𝙡𝙞𝙤 𝙒𝙤𝙧𝙠! ᯓ★ˎˊ˗
-        </h1>
-    </div>
-    <nav>
-        <a href="./public/2Q1GMgEspinosa.html" style="font-size: 20px; color: #80aae5;"> ˖» 𝙁𝙞𝙧𝙨𝙩 𝙂𝙧𝙖𝙙𝙚𝙙 𐙚 </a> <br> 
-        <a href ="#" style="font-size: 20px; color: #80aae5;"> ˖» 𝙎𝙚𝙘𝙤𝙣𝙙 𝙂𝙧𝙖𝙙𝙚𝙙 𐙚 </a></br>
-        <a href ="#" style="font-size: 20px; color: #80aae5;"> ˖» 𝙏𝙝𝙞𝙧𝙙 𝙂𝙧𝙖𝙙𝙚𝙙 𐙚 </a></br> 
-        <a href ="#" style="font-size: 20px; color: #80aae5;"> ˖» 𝘼𝙘𝙘𝙚𝙨𝙨 𝙩𝙤 𝙤𝙪𝙧 𝙋𝙧𝙤𝙟𝙚𝙘𝙩 𐙚 </a></br>
-    </nav>
+  <section class="w3-container">
+  <h1 style="background-color: #cce7ff; color: #83aaca; padding: 10px 20px; border-radius: 15px; display: inline-block;">
+    𝘾𝙖𝙨𝙨𝙞𝙚 𝙀𝙨𝙥𝙞𝙣𝙤𝙨𝙖 | 𝙈𝙮 𝙌𝟮 𝙋𝙤𝙧𝙩𝙛𝙤𝙡𝙞𝙤 𝙒𝙤𝙧𝙠! ᯓ★ˎˊ˗
+</h1>
 
-    <img src="https://media1.tenor.com/m/LtszwWQIiuwAAAAC/cinnamoroll-hi.gif" alt = "cinnamoroll" title="cinamorollll">
-</body>
-</html>
-<header>
 
-</header>
-<section></section>
+
+   <nav>
+    <ul>
+     <a href="./public/2Q1GMgEspinosa.html" style="font-size: 30px; color: #80aae5;">.ᐟ 𝙁𝙞𝙧𝙨𝙩 𝙂𝙧𝙖𝙙𝙚𝙙 𐙚 </a> <br>
+     <a href ="" ></a> </br>
+     <a href =""></a></br>
+     <a href =""></a></br>
+
+<img src="https://media.tenor.com/P5EJALTMklMAAAAj/cinnamoroll.gif" 
+     alt="Cinnamoroll Sleepy GIF" 
+     width="300" height="300">
+
+
+
+    </ul>
+   </nav>
+  </section>
+  <script src="script.js">
+  </script>
 
