--- a/public/2Q1GMgEspinosa.html
+++ b/public/2Q1GMgEspinosa.html
@@ -263,13 +263,13 @@
  
     <!-- NAVIGATION BAR -->
   <nav>
-    <a href="/index.html"> Home </a>
-    <a href="Ateneo.html">Ateneo</a>
-    <a href="UST.html">UST</a>
-    <a href="UP.html">UP</a>
-    <a href="/public/2Q1GMgEspinosa.html">La Salle</a>
+    <a href="../index.html">Home</a>
+    <a href="https://meganrainnidea.github.io/2QPortfolio_MgNIDEA/public/2Q1GMgNidea.html">ADMU</a>
+    <a href="https://maxine0323.github.io/CS3_2ndQtrPortfolio_MgREPEDRO//public/2Q1GMagnesiumRepedro.html">UST</a>
+    <a href= "https://cariangela.github.io/2QPortfolioMgGABRIEL/public/2Q1GMgGabriel.html">UP</a>
+    <a href="./public/2Q1GMgEspinosa.html" class="active">La Salle</a>
   </nav>
-
+  
 
   <!-- MAIN CONTENT -->
   <main>
